@@ -1,3 +1,7 @@
+2000-05-09  Per Bothner  <per@bothner.com>
+
+	* Values.java:  Make implement java.io.Externalizable.
+
 2000-04-21  Per Bothner  <per@bothner.com>
 
 	* UnboundConstraint.java (get):  Check parent environment.
